--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,3 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
+.kalam_font {
+    font-family: "Great Vibes", serif;
+    font-weight: 400;
+    font-style: normal;
+  }
+
+  .custom_bg {
+    background-image: url(../../public/images/BG.png);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+  }
