--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+
+/* product page */
+
+.product_page {
+  background-image: url(./../../public/product/bg.png);
+}
+
 /* /////////////////////////////////// */
 
 .bgImage {
