--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,8 +1,17 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+/* @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 
+*{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: "Montserrat",sans-serif;
+  /* font-family:"Poppins" ,sans-serif ; */
+}
 /* product page */
 
 .product_page {
@@ -134,15 +143,14 @@
 /* /////////////////////////////////// */
 
 
-
-
-
 :root {
   --red-color: #ffffff;
   --bg-color: #111827;
 }
 
-
+.sub_heading{
+  @apply leading-tight font-bold text-5xl
+}
 
 .kalam_font {
   font-family: "Great Vibes", serif;
@@ -164,7 +172,9 @@
 }
 
 /* MUJEEB CSS */
-
+td{
+  @apply py-[3%]
+}
 /* SINCE Text */
 
 .sin {
@@ -204,4 +214,32 @@
 
 .child {
   @apply flex flex-col gap-3
+}
+
+.product_card{
+ background-color: white;
+  /* box-shadow: 2px 2px 5px silver; */
+}
+
+
+/* ====== Details ====== */
+.size_btn{
+  border-radius: 5px;
+  @apply w-[60px] border h-7 flex items-center justify-center
+}
+.size_btn { 
+  @apply bg-white focus:bg-gray-200 focus:border focus:border-gray-700
+}
+.color_btn{
+  border-radius: 5px;
+  @apply w-[60px] h-7
+}
+.color_btn:focus{
+  padding: 3px;
+   
+}
+.s{
+  height: 100%;
+  width: 100%;
+  border-radius: 5px;
 }
